--- a/source/catalog.html
+++ b/source/catalog.html
@@ -37,7 +37,11 @@
   <header class="page-header page-header--no-promo page-header__container site-grid__wrapper">
     <div class="page-header__wrapper">
       <a class="page-header__logo-link" href="index.html">
-        <img class="page-header__logo-image"  src="img/logo-mobile.svg" width="191" height="38" alt="Логотип магазина Cat energy">
+        <picture>
+          <source media="(min-width: 1440px)" srcset="img/logo-desktop.svg"/>
+          <source media="(min-width: 768px)" srcset="img/logo-tablet.svg"/>
+          <img class="page-header__logo-image"  src="img/logo-mobile.svg" width="191" height="38" alt="Логотип магазина Cat energy">
+        </picture>
       </a>
       <button class="burger-menu burger-menu--active" aria-label="Главное меню"></button>
     </div>
@@ -57,7 +61,13 @@
           <section class="product">
             <div class="product__content">
               <div class="product__image-container">
-                <img class="product__image" src="img/chicken-small-mobile@1x.jpg" alt="Упаковка куриного филе Cat energy pro, 500г.">
+                <picture>
+                  <source media="(min-width: 1440px)" srcset="img/chicken-small-desktop@1x.png 1x, img/chicken-small-desktop@2x.png 2x"/>
+
+                  <source media="(min-width: 768px)" srcset="img/chicken-small-tablet@1x.png 1x, img/chicken-small-tablet@2x.png 2x"/>
+
+                  <img class="product__image" src="img/chicken-small-mobile@1x.jpg" source="img/chicken-small-desktop@2x.jpg 2x" alt="Упаковка куриного филе Cat energy pro, 500г.">
+                </picture>
               </div>
               <div class="product__container">
                 <h3 class="product__title">Cat Energy  PRO 500 г</h3>
@@ -85,7 +95,13 @@
           <section class="product">
             <div class="product__content">
               <div class="product__image-container">
-                <img class="product__image" src="img/chicken-big-mobile@1x.jpg" alt="Упаковка куриного филе Cat energy pro, 1000г.">
+                <picture>
+                  <source media="(min-width: 1440px)" srcset="img/chicken-big-desktop@1x.png 1x, img/chicken-big-desktop@2x.png 2x"/>
+
+                  <source media="(min-width: 768px)" srcset="img/chicken-big-tablet@1x.png 1x, img/chicken-big-tablet@2x.png 2x"/>
+
+                  <img class="product__image" src="img/chicken-big-mobile@1x.jpg" source="img/chicken-big-desktop@2x.jpg 2x" alt="Упаковка куриного филе Cat energy pro, 1000г.">
+                </picture>
               </div>
               <div class="product__container">
                 <h3 class="product__title">Cat Energy  PRO 1000 г</h3>
@@ -113,7 +129,13 @@
           <section class="product">
             <div class="product__content">
               <div class="product__image-container">
-                <img class="product__image" src="img/fish-small-mobile@1x.jpg" alt="Упаковка рыбного филе Cat energy pro, 500г.">
+                <picture>
+                  <source media="(min-width: 1440px)" srcset="img/fish-small-desktop@1x.png 1x, img/fish-small-desktop@2x.png 2x"/>
+
+                  <source media="(min-width: 768px)" srcset="img/fish-small-tablet@1x.png 1x, img/fish-small-tablet@2x.png 2x"/>
+
+                  <img class="product__image" src="img/fish-small-mobile@1x.jpg" source="img/fish-small-desktop@2x.jpg 2x" alt="Упаковка рыбного филе Cat energy pro, 500г.">
+                </picture>
               </div>
               <div class="product__container">
                 <h3 class="product__title">Cat Energy  PRO 500 г</h3>
@@ -141,7 +163,21 @@
           <section class="product">
             <div class="product__content">
               <div class="product__image-container">
-                <img class="product__image" src="img/fish-big-mobile@1x.jpg" alt="Упаковка рыбного филе Cat energy pro, 1000г.">
+                <picture>
+                  <source media="(min-width: 1440px)" srcset=
+                  "img/fish-big-desktop@1x.png 1x,
+                  img/fish-big-desktop@2x.png 2x"/>
+
+                  <source media="(min-width: 768px)" srcset=
+                  "img/fish-big-tablet@1x.png 1x,
+                  img/fish-big-tablet@2x.png 2x"/>
+
+                  <img class="product__image" src=
+                  "img/fish-big-mobile@1x.jpg"
+                  source="img/fish-big-desktop@2x.jpg 2x"
+
+                  alt="Упаковка рыбного филе Cat energy pro, 1000г.">
+                </picture>
               </div>
               <div class="product__container">
                 <h3 class="product__title">Cat Energy  PRO 1000 г</h3>
@@ -169,7 +205,21 @@
           <section class="product">
             <div class="product__content">
               <div class="product__image-container">
-                <img class="product__image" src="img/buckwheat-small-mobile@1x.jpg" alt="Упаковка гречневой каши Cat energy slim, 500г.">
+                <picture>
+                  <source media="(min-width: 1440px)" srcset=
+                  "img/buckwheat-small-desktop@1x.png 1x,
+                  img/buckwheat-small-desktop@2x.png 2x"/>
+
+                  <source media="(min-width: 768px)" srcset=
+                  "img/buckwheat-small-tablet@1x.png 1x,
+                  img/buckwheat-small-tablet@2x.png 2x"/>
+
+                  <img class="product__image" src=
+                  "img/buckwheat-small-mobile@1x.jpg"
+                  source="img/buckwheat-small-desktop@2x.jpg 2x"
+
+                  alt="Упаковка гречневой каши Cat energy slim, 500г.">
+                </picture>
               </div>
               <div class="product__container">
                 <h3 class="product__title">Cat Energy slim 500 г</h3>
@@ -197,7 +247,21 @@
           <section class="product">
             <div class="product__content">
               <div class="product__image-container">
-                <img class="product__image" src="img/buckwheat-big-mobile@1x.jpg" alt="Упаковка гречневой каши Cat energy slim, 1000г.">
+                <picture>
+                  <source media="(min-width: 1440px)" srcset=
+                  "img/buckwheat-big-desktop@1x.png 1x,
+                  img/buckwheat-big-desktop@2x.png 2x"/>
+
+                  <source media="(min-width: 768px)" srcset=
+                  "img/buckwheat-big-tablet@1x.png 1x,
+                  img/buckwheat-big-tablet@2x.png 2x"/>
+
+                  <img class="product__image" src=
+                  "img/buckwheat-big-mobile@1x.jpg"
+                  source="img/buckwheat-big-desktop@2x.jpg 2x"
+
+                  alt="Упаковка гречневой каши Cat energy slim, 1000г.">
+                </picture>
               </div>
               <div class="product__container">
                 <h3 class="product__title">Cat Energy slim 1000 г</h3>
@@ -225,7 +289,21 @@
           <section class="product">
             <div class="product__content">
               <div class="product__image-container">
-                <img class="product__image" src="img/rice-small-mobile@1x.jpg" alt="Упаковка рисовой каши Cat energy slim, 500г.">
+                <picture>
+                  <source media="(min-width: 1440px)" srcset=
+                  "img/rice-small-desktop@1x.png 1x,
+                  img/rice-small-desktop@2x.png 2x"/>
+
+                  <source media="(min-width: 768px)" srcset=
+                  "img/rice-small-tablet@1x.png 1x,
+                  img/rice-small-tablet@2x.png 2x"/>
+
+                  <img class="product__image" src=
+                  "img/rice-small-mobile@1x.jpg"
+                  source="img/rice-small-desktop@2x.jpg 2x"
+
+                  alt="Упаковка рисовой каши Cat energy slim, 500г.">
+                </picture>
               </div>
               <div class="product__container">
                 <h3 class="product__title">Cat Energy slim 500 г</h3>
@@ -418,13 +496,13 @@
         </span>
       </a>
     </div>
-      <div class="page-footer__copyright copyright">
-        <a class="copyright__company" href="#">HTML Academy
-          <svg class="copyright__logo" width="27" height="34" xmlns="http://www.w3.org/2000/svg" viewBox="10 10 40 40">
-            <path fill="#666666" d="M30.2 5h-.2l-19.7 2.1v36.2l19.7 11.7 19.7-11.7v-36.2l-19.5-2.1zm17 36.8l-17.2 10.2-17.2-10.2v-14.8l17.1 10.2v1.8l-11.7-7v1.8l11.8 7.1v1.9l-11.8-7v1.8l11.8 7 11.9-7.1v-7.6l5.3-3.2v15.1zm-.1-17l-4.7 2.8-2.2 1.3-10.3-6.1v1.8l8.8 5.3h-.1l-.2.1-1.3.7-7.3-4.3v1.8l5.8 3.4-1.4.9-4.3-2.6v1.8l2.9 1.7-2.9 1.7-17-10.1 17-10.2 17.2 10zm.1-1.8l-17.3-10.2-17.1 10.2v-13.6l17.2-1.8 17.2 1.8v13.6z"/>
-          </svg>
-        </a>
-      </div>
+    <div class="page-footer__copyright copyright">
+      <a class="copyright__company" href="#">HTML Academy
+        <svg class="copyright__logo" width="27" height="34" xmlns="http://www.w3.org/2000/svg" viewBox="10 10 40 40">
+          <path fill="#666666" d="M30.2 5h-.2l-19.7 2.1v36.2l19.7 11.7 19.7-11.7v-36.2l-19.5-2.1zm17 36.8l-17.2 10.2-17.2-10.2v-14.8l17.1 10.2v1.8l-11.7-7v1.8l11.8 7.1v1.9l-11.8-7v1.8l11.8 7 11.9-7.1v-7.6l5.3-3.2v15.1zm-.1-17l-4.7 2.8-2.2 1.3-10.3-6.1v1.8l8.8 5.3h-.1l-.2.1-1.3.7-7.3-4.3v1.8l5.8 3.4-1.4.9-4.3-2.6v1.8l2.9 1.7-2.9 1.7-17-10.1 17-10.2 17.2 10zm.1-1.8l-17.3-10.2-17.1 10.2v-13.6l17.2-1.8 17.2 1.8v13.6z"/>
+        </svg>
+      </a>
+    </div>
   </div>
 </footer>
 </body>
