--- a/source/form.html
+++ b/source/form.html
@@ -37,7 +37,11 @@
   <header class="page-header page-header--no-promo page-header__container site-grid__wrapper">
     <div class="page-header__wrapper">
       <a class="page-header__logo-link" href="index.html">
-        <img class="page-header__logo-image"  src="img/logo-mobile.svg" width="191" height="38" alt="Логотип магазина Cat energy">
+        <picture>
+          <source media="(min-width: 1440px)" srcset="img/logo-desktop.svg"/>
+          <source media="(min-width: 768px)" srcset="img/logo-tablet.svg"/>
+          <img class="page-header__logo-image"  src="img/logo-mobile.svg" width="191" height="38" alt="Логотип магазина Cat energy">
+        </picture>
       </a>
       <button class="burger-menu burger-menu--active" aria-label="Главное меню"></button>
     </div>
@@ -103,22 +107,22 @@
             <div class="client-contacts__wrapper client-contacts__wrapper--mail client-contacts__wrapper--no-margin">
               <label class="program-form__label client-contacts__label client-contacts__label--email-margin" for="input__email">E-mail:*</label>
               <input class="client-contacts__input client-contacts__input-email program-form__input" id="input__email" type="text" name="client-name" placeholder="KUKLACHEV@GMAIL.COM" required>
-              <svg class="client-contacts__email-icon" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="17" height="13" x="0px" y="0px" viewBox="0 0 17 13" style="enable-background:new 0 0 17 13;" xml:space="preserve">
-  <path class="client-contacts__email-icon" fill="#222222" d="M15.6,11.6H1.4V5.8H0V13h17V5.8h-1.4V11.6z M0,0v2.3l8.5,7.1L17,2.3V0H0z M15.6,1.6L8.5,7.5L1.4,1.6V1.4h14.2L15.6,1.6z"/>
-</svg>
+              <svg class="client-contacts__email-icon" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="17" height="13" x="0px" y="0px" viewBox="0 -7 17 13" style="enable-background:new 0 0 17 13;" xml:space="preserve">
+                <path class="client-contacts__email-icon" fill="#222222" d="M15.6,11.6H1.4V5.8H0V13h17V5.8h-1.4V11.6z M0,0v2.3l8.5,7.1L17,2.3V0H0z M15.6,1.6L8.5,7.5L1.4,1.6V1.4h14.2L15.6,1.6z"/>
+              </svg>
             </div>
 
             <div class="client-contacts__wrapper client-contacts__wrapper--phone">
               <label class="program-form__label client-contacts__label client-contacts__label--phone-margin" for="input__phone">Телефон:*</label>
               <input class="client-contacts__input client-contacts__input-phone program-form__input" id="input__phone" type="text" name="phone" placeholder="8 (960) 900-60-90" required>
               <svg class="client-contacts__phone-icon" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 20 20" style="enable-background:new 0 0 20 20;" xml:space="preserve">
-  <path fill="#222222" d="M17.9,9.4H9.4v1.2h8.5l-2.1,2.1l0.9,0.9l3.1-3.1c0.2-0.2,0.2-0.6,0-0.9l-3.1-3.1l-0.9,0.9L17.9,9.4z"/>
+                <path fill="#222222" d="M17.9,9.4H9.4v1.2h8.5l-2.1,2.1l0.9,0.9l3.1-3.1c0.2-0.2,0.2-0.6,0-0.9l-3.1-3.1l-0.9,0.9L17.9,9.4z"/>
                 <path fill="#222222"
-                  d="M8.1,19.4v-6.2c0-0.3-0.3-0.6-0.6-0.6H4.4l0,0H3.1l0,0c0,0.7,0.6,1.2,1.2,1.2h2.5v5H3.1c-1,0.1-1.8-0.7-1.9-1.7
-  c0-0.1,0-0.1,0-0.2V3.1c0-1,0.8-1.8,1.7-1.8c0.1,0,0.1,0,0.2,0h3.7v5H4.4c-0.7,0-1.2,0.6-1.2,1.2h4.4c0.3,0,0.6-0.3,0.6-0.6V0.6
-  C8.1,0.3,7.8,0,7.5,0H3.1C1.5-0.1,0.1,1.2,0,2.9C0,3,0,3.1,0,3.1v13.7c-0.1,1.7,1.2,3.1,2.9,3.1c0.1,0,0.2,0,0.2,0h4.4
-  C7.8,20,8.1,19.7,8.1,19.4z"/>
-</svg>
+                d="M8.1,19.4v-6.2c0-0.3-0.3-0.6-0.6-0.6H4.4l0,0H3.1l0,0c0,0.7,0.6,1.2,1.2,1.2h2.5v5H3.1c-1,0.1-1.8-0.7-1.9-1.7
+                c0-0.1,0-0.1,0-0.2V3.1c0-1,0.8-1.8,1.7-1.8c0.1,0,0.1,0,0.2,0h3.7v5H4.4c-0.7,0-1.2,0.6-1.2,1.2h4.4c0.3,0,0.6-0.3,0.6-0.6V0.6
+                C8.1,0.3,7.8,0,7.5,0H3.1C1.5-0.1,0.1,1.2,0,2.9C0,3,0,3.1,0,3.1v13.7c-0.1,1.7,1.2,3.1,2.9,3.1c0.1,0,0.2,0,0.2,0h4.4
+                C7.8,20,8.1,19.7,8.1,19.4z"/>
+              </svg>
             </div>
           </div>
 
