--- a/source/catalog.html
+++ b/source/catalog.html
@@ -105,18 +105,30 @@
             <div class="product__content">
               <div class="product__image-container">
                 <picture>
+                  <source type="image/webp" media="(min-width: 1440px)"
+                  srcset="img/chicken-small-desktop@1x.webp 1x,
+                  img/chicken-small-desktop@2x.webp 2x"/>
+
+                  <source type="image/webp" media="(min-width: 768px)"
+                  srcset="img/chicken-small-tablet@1x.webp 1x,
+                  img/chicken-small-tablet@2x.webp 2x"/>
+
+                  <source type="image/webp"
+                  srcset="img/chicken-small-mobile@1x.webp 1x,
+                  img/chicken-small-mobile@2x.webp 2x"/>
+
                   <source media="(min-width: 1440px)"
-                    srcset="img/chicken-small-desktop@1x.png 1x,
-                            img/chicken-small-desktop@2x.png 2x"/>
+                  srcset="img/chicken-small-desktop@1x.png 1x,
+                  img/chicken-small-desktop@2x.png 2x"/>
 
                   <source media="(min-width: 768px)"
-                    srcset="img/chicken-small-tablet@1x.png 1x,
-                            img/chicken-small-tablet@2x.png 2x"/>
+                  srcset="img/chicken-small-tablet@1x.png 1x,
+                  img/chicken-small-tablet@2x.png 2x"/>
 
                   <img class="product__image"
-                    src="img/chicken-small-mobile@1x.jpg"
-                    srcset="img/chicken-small-mobile@2x.jpg 2x"
-                    alt="Упаковка куриного филе Cat energy pro, 500г.">
+                  src="img/chicken-small-mobile@1x.jpg"
+                  srcset="img/chicken-small-mobile@2x.jpg 2x"
+                  alt="Упаковка куриного филе Cat energy pro, 500г.">
                 </picture>
               </div>
               <div class="product__container">
@@ -146,18 +158,30 @@
             <div class="product__content">
               <div class="product__image-container">
                 <picture>
+                  <source type="image/webp" media="(min-width: 1440px)"
+                  srcset="img/chicken-big-desktop@1x.webp 1x,
+                  img/chicken-big-desktop@2x.webp 2x"/>
+
+                  <source type="image/webp" media="(min-width: 768px)"
+                  srcset="img/chicken-big-tablet@1x.webp 1x,
+                  img/chicken-big-tablet@2x.webp 2x"/>
+
+                  <source type="image/webp"
+                  srcset="img/chicken-big-mobile@1x.webp 1x,
+                  img/chicken-big-mobile@2x.webp 2x"/>
+
                   <source media="(min-width: 1440px)"
-                    srcset="img/chicken-big-desktop@1x.png 1x,
-                            img/chicken-big-desktop@2x.png 2x"/>
+                  srcset="img/chicken-big-desktop@1x.png 1x,
+                  img/chicken-big-desktop@2x.png 2x"/>
 
                   <source media="(min-width: 768px)"
-                    srcset="img/chicken-big-tablet@1x.png 1x,
-                            img/chicken-big-tablet@2x.png 2x"/>
+                  srcset="img/chicken-big-tablet@1x.png 1x,
+                  img/chicken-big-tablet@2x.png 2x"/>
 
                   <img class="product__image"
-                    src="img/chicken-big-mobile@1x.jpg"
-                    srcset="img/chicken-big-mobile@2x.jpg 2x"
-                    alt="Упаковка куриного филе Cat energy pro, 1000г.">
+                  src="img/chicken-big-mobile@1x.jpg"
+                  srcset="img/chicken-big-mobile@2x.jpg 2x"
+                  alt="Упаковка куриного филе Cat energy pro, 1000г.">
                 </picture>
               </div>
               <div class="product__container">
@@ -187,18 +211,30 @@
             <div class="product__content">
               <div class="product__image-container">
                 <picture>
+                  <source type="image/webp" media="(min-width: 1440px)"
+                  srcset="img/fish-small-desktop@1x.webp 1x,
+                  img/fish-small-desktop@2x.webp 2x"/>
+
+                  <source type="image/webp" media="(min-width: 768px)"
+                  srcset="img/fish-small-tablet@1x.webp 1x,
+                  img/fish-small-tablet@2x.webp 2x"/>
+
+                  <source type="image/webp"
+                  srcset="img/fish-small-mobile@1x.webp 1x,
+                  img/fish-small-mobile@2x.webp 2x"/>
+
                   <source media="(min-width: 1440px)"
-                    srcset="img/fish-small-desktop@1x.png 1x,
-                            img/fish-small-desktop@2x.png 2x"/>
+                  srcset="img/fish-small-desktop@1x.png 1x,
+                  img/fish-small-desktop@2x.png 2x"/>
 
                   <source media="(min-width: 768px)"
-                    srcset="img/fish-small-tablet@1x.png 1x,
-                            img/fish-small-tablet@2x.png 2x"/>
+                  srcset="img/fish-small-tablet@1x.png 1x,
+                  img/fish-small-tablet@2x.png 2x"/>
 
                   <img class="product__image"
-                    src="img/fish-small-mobile@1x.jpg"
-                    srcset="img/fish-small-mobile@2x.jpg 2x"
-                    alt="Упаковка рыбного филе Cat energy pro, 500г.">
+                  src="img/fish-small-mobile@1x.jpg"
+                  srcset="img/fish-small-mobile@2x.jpg 2x"
+                  alt="Упаковка рыбного филе Cat energy pro, 500г.">
                 </picture>
               </div>
               <div class="product__container">
@@ -228,18 +264,30 @@
             <div class="product__content">
               <div class="product__image-container">
                 <picture>
+                  <source type="image/webp" media="(min-width: 1440px)"
+                  srcset="img/fish-big-desktop@1x.webp 1x,
+                  img/fish-big-desktop@2x.webp 2x"/>
+
+                  <source type="image/webp" media="(min-width: 768px)"
+                  srcset="img/fish-big-tablet@1x.webp 1x,
+                  img/fish-big-tablet@2x.webp 2x"/>
+
+                  <source type="image/webp"
+                  srcset="img/fish-big-mobile@1x.webp 1x,
+                  img/fish-big-mobile@2x.webp 2x"/>
+
                   <source media="(min-width: 1440px)"
-                    srcset="img/fish-big-desktop@1x.png 1x,
-                            img/fish-big-desktop@2x.png 2x"/>
+                  srcset="img/fish-big-desktop@1x.png 1x,
+                  img/fish-big-desktop@2x.png 2x"/>
 
                   <source media="(min-width: 768px)"
-                    srcset="img/fish-big-tablet@1x.png 1x,
-                            img/fish-big-tablet@2x.png 2x"/>
+                  srcset="img/fish-big-tablet@1x.png 1x,
+                  img/fish-big-tablet@2x.png 2x"/>
 
                   <img class="product__image"
-                    src="img/fish-big-mobile@1x.jpg"
-                    srcset="img/fish-big-mobile@2x.jpg 2x"
-                    alt="Упаковка рыбного филе Cat energy pro, 1000г.">
+                  src="img/fish-big-mobile@1x.jpg"
+                  srcset="img/fish-big-mobile@2x.jpg 2x"
+                  alt="Упаковка рыбного филе Cat energy pro, 1000г.">
                 </picture>
               </div>
               <div class="product__container">
@@ -269,18 +317,30 @@
             <div class="product__content">
               <div class="product__image-container">
                 <picture>
+                  <source type="image/webp" media="(min-width: 1440px)"
+                  srcset="img/buckwheat-small-desktop@1x.webp 1x,
+                  img/buckwheat-small-desktop@2x.webp 2x"/>
+
+                  <source type="image/webp" media="(min-width: 768px)"
+                  srcset="img/buckwheat-small-tablet@1x.webp 1x,
+                  img/buckwheat-small-tablet@2x.webp 2x"/>
+
+                  <source type="image/webp"
+                  srcset="img/buckwheat-small-mobile@1x.webp 1x,
+                  img/buckwheat-small-mobile@2x.webp 2x"/>
+
                   <source media="(min-width: 1440px)"
-                    srcset="img/buckwheat-small-desktop@1x.png 1x,
-                            img/buckwheat-small-desktop@2x.png 2x"/>
+                  srcset="img/buckwheat-small-desktop@1x.png 1x,
+                  img/buckwheat-small-desktop@2x.png 2x"/>
 
                   <source media="(min-width: 768px)"
-                    srcset="img/buckwheat-small-tablet@1x.png 1x,
-                            img/buckwheat-small-tablet@2x.png 2x"/>
+                  srcset="img/buckwheat-small-tablet@1x.png 1x,
+                  img/buckwheat-small-tablet@2x.png 2x"/>
 
                   <img class="product__image"
-                    src="img/buckwheat-small-mobile@1x.jpg"
-                    srcset="img/buckwheat-small-mobile@2x.jpg 2x"
-                    alt="Упаковка гречневой каши Cat energy slim, 500г.">
+                  src="img/buckwheat-small-mobile@1x.jpg"
+                  srcset="img/buckwheat-small-mobile@2x.jpg 2x"
+                  alt="Упаковка гречневой каши Cat energy slim, 500г.">
                 </picture>
               </div>
               <div class="product__container">
@@ -310,13 +370,25 @@
             <div class="product__content">
               <div class="product__image-container">
                 <picture>
+                  <source type="image/webp" media="(min-width: 1440px)"
+                  srcset="img/buckwheat-big-desktop@1x.webp 1x,
+                  img/buckwheat-big-desktop@2x.webp 2x"/>
+
+                  <source type="image/webp" media="(min-width: 768px)"
+                  srcset="img/buckwheat-big-tablet@1x.webp 1x,
+                  img/buckwheat-big-tablet@2x.webp 2x"/>
+
+                  <source type="image/webp"
+                  srcset="img/buckwheat-big-mobile@1x.webp 1x,
+                  img/buckwheat-big-mobile@2x.webp 2x"/>
+
                   <source media="(min-width: 1440px)"
-                    srcset="img/buckwheat-big-desktop@1x.png 1x,
-                            img/buckwheat-big-desktop@2x.png 2x"/>
+                  srcset="img/buckwheat-big-desktop@1x.png 1x,
+                  img/buckwheat-big-desktop@2x.png 2x"/>
 
                   <source media="(min-width: 768px)"
-                    srcset="img/buckwheat-big-tablet@1x.png 1x,
-                            img/buckwheat-big-tablet@2x.png 2x"/>
+                  srcset="img/buckwheat-big-tablet@1x.png 1x,
+                  img/buckwheat-big-tablet@2x.png 2x"/>
 
                   <img class="product__image"
                   src="img/buckwheat-big-mobile@1x.jpg"
@@ -351,18 +423,30 @@
             <div class="product__content">
               <div class="product__image-container">
                 <picture>
+                  <source type="image/webp" media="(min-width: 1440px)"
+                  srcset="img/rice-small-desktop@1x.webp 1x,
+                  img/rice-small-desktop@2x.webp 2x"/>
+
+                  <source type="image/webp" media="(min-width: 768px)"
+                  srcset="img/rice-small-tablet@1x.webp 1x,
+                  img/rice-small-tablet@2x.webp 2x"/>
+
+                  <source type="image/webp"
+                  srcset="img/rice-small-mobile@1x.webp 1x,
+                  img/rice-small-mobile@2x.webp 2x"/>
+
                   <source media="(min-width: 1440px)"
-                    srcset="img/rice-small-desktop@1x.png 1x,
-                            img/rice-small-desktop@2x.png 2x"/>
+                  srcset="img/rice-small-desktop@1x.png 1x,
+                  img/rice-small-desktop@2x.png 2x"/>
 
                   <source media="(min-width: 768px)"
-                    srcset="img/rice-small-tablet@1x.png 1x,
-                            img/rice-small-tablet@2x.png 2x"/>
+                  srcset="img/rice-small-tablet@1x.png 1x,
+                  img/rice-small-tablet@2x.png 2x"/>
 
                   <img class="product__image"
-                    src="img/rice-small-mobile@1x.jpg"
-                    srcset="img/rice-small-mobile@2x.jpg 2x"
-                    alt="Упаковка рисовой каши Cat energy slim, 500г.">
+                  src="img/rice-small-mobile@1x.jpg"
+                  srcset="img/rice-small-mobile@2x.jpg 2x"
+                  alt="Упаковка рисовой каши Cat energy slim, 500г.">
                 </picture>
               </div>
               <div class="product__container">
