--- a/source/index.html
+++ b/source/index.html
@@ -103,29 +103,29 @@
         <b class="promo__slogan">Занялся собой? Займись котом!</b>
         <picture>
           <source type="image/webp" media="(min-width: 1440px)"
-            srcset="img/index-can-desktop@1x.webp 1x,
-                    img/index-can-desktop@2x.webp 2x"/>
+          srcset="img/index-can-desktop@1x.webp 1x,
+          img/index-can-desktop@2x.webp 2x"/>
 
           <source type="image/webp" media="(min-width: 768px)"
-            srcset="img/index-can-tablet@1x.webp 1x,
-                    img/index-can-tablet@2x.webp 2x"/>
+          srcset="img/index-can-tablet@1x.webp 1x,
+          img/index-can-tablet@2x.webp 2x"/>
 
           <source type="image/webp"
-            srcset="img/index-can-mobile@1x.webp 1x,
-                    img/index-can-mobile@2x.webp 2x"/>
+          srcset="img/index-can-mobile@1x.webp 1x,
+          img/index-can-mobile@2x.webp 2x"/>
 
           <source media="(min-width: 1440px)"
-            srcset="img/index-can-desktop@1x.png 1x,
-                    img/index-can-desktop@2x.png 2x"/>
+          srcset="img/index-can-desktop@1x.png 1x,
+          img/index-can-desktop@2x.png 2x"/>
 
           <source media="(min-width: 768px)"
-            srcset="img/index-can-tablet@1x.jpg 1x,
-                    img/index-can-tablet@2x.jpg 2x"/>
+          srcset="img/index-can-tablet@1x.jpg 1x,
+          img/index-can-tablet@2x.jpg 2x"/>
 
           <img class="promo__image"
-            src="img/index-can-mobile@1x.png"
-            srcset="img/index-can-mobile@2x.png 2x"
-            alt="Cat energy pro из курицы">
+          src="img/index-can-mobile@1x.png"
+          srcset="img/index-can-mobile@2x.png 2x"
+          alt="Cat energy pro из курицы">
         </picture>
         <a class="promo__button button" href="#">Подобрать программу</a>
       </section>
@@ -176,61 +176,63 @@
             <div class="slider__images">
               <picture>
                 <source type="image/webp" media="(min-width: 1440px)"
-                  srcset="img/before-desktop@1x.webp 1x,
-                          img/before-desktop@2x.webp 2x"/>
+                srcset="img/before-desktop@1x.webp 1x,
+                img/before-desktop@2x.webp 2x"/>
 
                 <source type="image/webp" media="(min-width: 768px)"
-                  srcset="img/before-tablet@1x.webp 1x,
-                          img/before-tablet@2x.webp 2x"/>
+                srcset="img/before-tablet@1x.webp 1x,
+                img/before-tablet@2x.webp 2x"/>
 
                 <source type="image/webp"
-                  srcset="img/before-mobile@1x.webp 1x,
-                          img/before-mobile@2x.webp 2x"/>
+                srcset="img/before-mobile@1x.webp 1x,
+                img/before-mobile@2x.webp 2x"/>
 
                 <source media="(min-width: 1440px)"
-                  srcset="img/before-desktop@1x.png 1x,
-                          img/before-desktop@2x.png 2x"/>
+                srcset="img/before-desktop@1x.png 1x,
+                img/before-desktop@2x.png 2x"/>
 
                 <source media="(min-width: 768px)"
-                  srcset="img/before-tablet@1x.png 1x,
-                          img/before-tablet@2x.png 2x"/>
+                srcset="img/before-tablet@1x.png 1x,
+                img/before-tablet@2x.png 2x"/>
 
                 <img class="slider__image slider__image--current"
-                  src="img/before-mobile@1x.png"
-                  srcset="img/before-mobile@2x.png 2x"
-                  alt="Кот до правильного питания">
+                src="img/before-mobile@1x.png"
+                srcset="img/before-mobile@2x.png 2x"
+                alt="Кот до правильного питания">
               </picture>
               <picture>
                 <source type="image/webp" media="(min-width: 1440px)"
-                  srcset="img/after-desktop@1x.webp 1x,
-                          img/after-desktop@2x.webp 2x"/>
+                srcset="img/after-desktop@1x.webp 1x,
+                img/after-desktop@2x.webp 2x"/>
 
                 <source type="image/webp" media="(min-width: 768px)"
-                  srcset="img/after-tablet@1x.webp 1x,
-                          img/after-tablet@2x.webp 2x"/>
+                srcset="img/after-tablet@1x.webp 1x,
+                img/after-tablet@2x.webp 2x"/>
 
                 <source type="image/webp"
-                  srcset="img/after-mobile@1x.webp 1x,
-                          img/after-mobile@2x.webp 2x"/>
+                srcset="img/after-mobile@1x.webp 1x,
+                img/after-mobile@2x.webp 2x"/>
 
                 <source media="(min-width: 1440px)"
-                  srcset="img/after-desktop@1x.png 1x,
-                          img/after-desktop@2x.png 2x"/>
+                srcset="img/after-desktop@1x.png 1x,
+                img/after-desktop@2x.png 2x"/>
 
                 <source media="(min-width: 768px)"
-                  srcset="img/after-tablet@1x.png 1x,
-                          img/after-tablet@2x.png 2x"/>
+                srcset="img/after-tablet@1x.png 1x,
+                img/after-tablet@2x.png 2x"/>
 
-                <img class="slider__image visually-hidden"
-                  src="img/after-mobile@1x.png"
-                  srcset="img/after-mobile@2x.png 2x"
-                  alt="Кот после правильного питания">
+                <img class="slider__image"
+                src="img/after-mobile@1x.png"
+                srcset="img/after-mobile@2x.png 2x"
+                alt="Кот после правильного питания">
               </picture>
             </div>
             <div class="slider__wrapper">
               <div class="slider__buttons">
                 <button class="slider__button slider__button--current">Было</button>
-                <div class="slider__toggle"><span class="slider__toggle-item slider__toggle-item--left"></span></div>
+                <div class="slider__toggle">
+                  <button class="slider__toggle-item"></button>
+                </div>
                 <button class="slider__button">Стало</button>
               </div>
             </div>
