--- a/source/index.html
+++ b/source/index.html
@@ -76,72 +76,75 @@
       </g>
     </symbol>
   </svg>
-
-  <header class="page-header page-header__container site-grid__wrapper">
-    <div class="page-header__wrapper">
-      <a class="page-header__logo-link">
-        <picture>
-          <source media="(min-width: 1440px)" srcset="img/logo-desktop.svg"/>
-          <source media="(min-width: 768px)" srcset="img/logo-tablet.svg"/>
-          <img class="page-header__logo-image"  src="img/logo-mobile.svg" width="191" height="38" alt="Логотип магазина Cat energy">
-        </picture>
-      </a>
-      <button class="burger-menu burger-menu--closed burger-menu--no-js" aria-label="Главное меню"></button>
-    </div>
-    <nav class="page-header__main-menu main-menu main-menu--closed main-menu--no-js">
-      <ul class="main-menu__list">
-        <li class="main-menu__item main-menu__item--current"><a class="main-menu__link">Главная</a></li>
-        <li class="main-menu__item "><a class="main-menu__link" href="catalog.html">Каталог продукции</a></li>
-        <li class="main-menu__item"><a class="main-menu__link" href="form.html">Подбор программы</a></li>
-      </ul>
-    </nav>
-  </header>
+  <div class="site-grid__wrapper site-grid__wrapper--background-header">
+    <header class="page-header page-header__container site-grid__wrapper">
+      <div class="page-header__wrapper">
+        <a class="page-header__logo-link">
+          <picture>
+            <source media="(min-width: 1440px)" srcset="img/logo-desktop.svg"/>
+            <source media="(min-width: 768px)" srcset="img/logo-tablet.svg"/>
+            <img class="page-header__logo-image"  src="img/logo-mobile.svg" width="191" height="38" alt="Логотип магазина Cat energy">
+          </picture>
+        </a>
+        <button class="burger-menu burger-menu--closed burger-menu--no-js" aria-label="Главное меню"></button>
+      </div>
+      <nav class="page-header__main-menu main-menu main-menu--closed main-menu--no-js">
+        <ul class="main-menu__list">
+          <li class="main-menu__item main-menu__item--current"><a class="main-menu__link">Главная</a></li>
+          <li class="main-menu__item "><a class="main-menu__link" href="catalog.html">Каталог продукции</a></li>
+          <li class="main-menu__item"><a class="main-menu__link" href="form.html">Подбор программы</a></li>
+        </ul>
+      </nav>
+    </header>
+  </div>
   <main class="page-main site-grid__wrapper">
-    <div class="page-main__wrapper">
-      <section class="page-main__promo promo">
-        <h1 class="promo__title">Функциональное питание для котов</h1>
-        <b class="promo__slogan">Занялся собой? Займись котом!</b>
-        <picture>
-          <source type="image/webp" media="(min-width: 1440px)"
-          srcset="img/index-can-desktop@1x.webp 1x,
-          img/index-can-desktop@2x.webp 2x"/>
+    <div class="site-grid__wrapper site-grid__wrapper--background-promo">
+      <div class="page-main__wrapper">
+        <section class="page-main__promo promo promo--background">
+          <h1 class="promo__title">Функциональное питание для котов</h1>
+          <b class="promo__slogan">Занялся собой? Займись котом!</b>
+          <picture>
+            <source type="image/webp" media="(min-width: 1440px)"
+            srcset="img/index-can-desktop@1x.webp 1x,
+            img/index-can-desktop@2x.webp 2x"/>
 
-          <source type="image/webp" media="(min-width: 768px)"
-          srcset="img/index-can-tablet@1x.webp 1x,
-          img/index-can-tablet@2x.webp 2x"/>
+            <source type="image/webp" media="(min-width: 768px)"
+            srcset="img/index-can-tablet@1x.webp 1x,
+            img/index-can-tablet@2x.webp 2x"/>
 
-          <source type="image/webp"
-          srcset="img/index-can-mobile@1x.webp 1x,
-          img/index-can-mobile@2x.webp 2x"/>
+            <source type="image/webp"
+            srcset="img/index-can-mobile@1x.webp 1x,
+            img/index-can-mobile@2x.webp 2x"/>
 
-          <source media="(min-width: 1440px)"
-          srcset="img/index-can-desktop@1x.png 1x,
-          img/index-can-desktop@2x.png 2x"/>
+            <source media="(min-width: 1440px)"
+            srcset="img/index-can-desktop@1x.png 1x,
+            img/index-can-desktop@2x.png 2x"/>
 
-          <source media="(min-width: 768px)"
-          srcset="img/index-can-tablet@1x.jpg 1x,
-          img/index-can-tablet@2x.jpg 2x"/>
+            <source media="(min-width: 768px)"
+            srcset="img/index-can-tablet@1x.jpg 1x,
+            img/index-can-tablet@2x.jpg 2x"/>
 
-          <img class="promo__image"
-          src="img/index-can-mobile@1x.png"
-          srcset="img/index-can-mobile@2x.png 2x"
-          alt="Cat energy pro из курицы">
-        </picture>
-        <a class="promo__button button" href="#">Подобрать программу</a>
-      </section>
+            <img class="promo__image"
+            src="img/index-can-mobile@1x.png"
+            srcset="img/index-can-mobile@2x.png 2x"
+            alt="Cat energy pro из курицы">
+          </picture>
+          <a class="promo__button button" href="#">Подобрать программу</a>
+        </section>
+      </div>
     </div>
     <div class="page-main__wrapper">
       <div class="page-main__categories categories">
         <section class="categories__item categories-item categories-slim">
           <h3 class="categories-item__title categories-slim__image">Похудение</h3>
           <p class="categories-item__about">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
-          <a class="categories-item__button categories-button" href="#">Каталог Slim</a>
+          <a class="categories-item__button categories-button" href="catalog-slim.html">Каталог Slim</a>
         </section>
         <section class="categories__item categories-item categories-item--max-padding categories-pro">
           <h3 class="categories-item__title categories-pro__image">Набор массы</h3>
           <p class="categories-item__about">Заработать авторитет среди дворовых котов и даже собак?
           Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!</p>
-          <a class="categories-item__button categories-button" href="#">Каталог pro</a>
+          <a class="categories-item__button categories-button" href="catalog-pro.html">Каталог pro</a>
         </section>
       </div>
     </div>
@@ -281,7 +284,7 @@
         </a>
       </div>
       <div class="page-footer__copyright copyright">
-        <a class="copyright__company" href="#">HTML Academy
+        <a class="copyright__company" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy
           <svg class="copyright__logo" width="27" height="34" xmlns="http://www.w3.org/2000/svg" viewBox="10 10 40 40">
             <path fill="#666666" d="M30.2 5h-.2l-19.7 2.1v36.2l19.7 11.7 19.7-11.7v-36.2l-19.5-2.1zm17 36.8l-17.2 10.2-17.2-10.2v-14.8l17.1 10.2v1.8l-11.7-7v1.8l11.8 7.1v1.9l-11.8-7v1.8l11.8 7 11.9-7.1v-7.6l5.3-3.2v15.1zm-.1-17l-4.7 2.8-2.2 1.3-10.3-6.1v1.8l8.8 5.3h-.1l-.2.1-1.3.7-7.3-4.3v1.8l5.8 3.4-1.4.9-4.3-2.6v1.8l2.9 1.7-2.9 1.7-17-10.1 17-10.2 17.2 10zm.1-1.8l-17.3-10.2-17.1 10.2v-13.6l17.2-1.8 17.2 1.8v13.6z"/>
           </svg>
